--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     --light-red: rgb(245, 62, 62);
 }
 
+body {               
+    overscroll-behavior: contain;
+}
+
 #screen-wrapper {
     width: 100%;
     min-height: 100vh;
